--- a/views/chatting.ejs
+++ b/views/chatting.ejs
@@ -54,7 +54,7 @@
       <!-- <form enctype="multipart/form-data">
         <input type="file" name="files" id="uploadfiles" style="display: none;" multiple >
       </form> -->
-      <button class="btn btn-primary" id="send-btn">Send</button>
+      <button class="btn btn-primary"  id="send-btn"  style="background-color: transparent !important; border: none; font-size: 30px; transform: rotate(38deg);"><i class="bi bi-send"></i></button>
     </div>
   </div>
 
