--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,7 +8,7 @@
     <title>login</title>
     <style>
     body {
-      background-color: #f0f2f5;
+      background-color: #272336bd;
       overflow: hidden;
     }
     .login-container {
@@ -18,7 +18,8 @@
       justify-content: center;
     }
     .login-box {
-      background: white;
+      background: #211E2F;
+      color: white;
       padding: 30px;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
@@ -33,6 +34,33 @@
       margin-top: 10px;
       display: none;
     }
+
+    input{
+      display: block;
+      height: 40px;
+      width: 100%;
+      font-size: 20px;
+      border-radius: 5px;
+      background-color: #35304b7e !important;
+      /* border: 1px solid black; */
+      border: none;
+      color: white !important;
+      /* margin-top: 30px; */
+    }
+    button{
+      margin-top: 10px;
+      height: 40px;
+      width: 50px !important;
+      background-color: #514d6694 !important;
+      /* border: 1px solid white; */
+      border: none !important;
+
+      color: white;
+      border-radius: 10px;
+    }
+    input::placeholder{
+      color:  white !important;
+    }
   </style>
 </head>
 <body>
@@ -44,7 +72,7 @@
             <div class="mb-3">
               <label for="number" class="form-label">Phone Number</label>
               <input type="tel" id="number" name="mobile" class="form-control" placeholder="Enter phone number" pattern="[0-9]{10}" required>
-              <div class="form-text">Must be 10 digits.</div>
+              <div class="form-text text-white">Must be 10 digits.</div>
             </div>
             
             <button type="submit" class="btn btn-primary w-100">Login</button>
