--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -8,8 +8,9 @@
     <title>login</title>
     <style>
     body {
-      background-color: #f0f2f5;
+      background-color: #272336bd;
       overflow: hidden;
+      color: white;
     }
     .login-container {
       min-height: 90vh;
@@ -18,7 +19,7 @@
       justify-content: center;
     }
     .login-box {
-      background: white;
+      background: #211E2F;
       padding: 30px;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
@@ -32,6 +33,34 @@
       border-radius: 50%;
       margin-top: 10px;
       display: none;
+    }
+    
+    input{
+      display: block;
+      height: 38px;
+      width: 100%;
+      font-size: 20px;
+      border-radius: 5px;
+      background-color: #35304b7e !important;
+      /* border: 1px solid black; */
+      border: none;
+      color: white !important;
+      /* margin-top: 30px; */
+    }
+
+    button{
+      margin-top: 10px;
+      height: 40px;
+      width: 50px !important;
+      background-color: #514d6694 !important;
+      /* border: 1px solid white; */
+      border: none !important;
+
+      color: white;
+      border-radius: 10px;
+    }
+     input::placeholder{
+      color:  white !important;
     }
   </style>
 </head>
