--- a/styling/style.css
+++ b/styling/style.css
@@ -10,7 +10,8 @@ body {
     height: 100vh;
     overflow: scroll;
     /* border-radius: 10px 10px 0 0; */
-    background-color: white;
+    background: #201D2E;
+    background-image: linear-gradient(#272435, #554c7ec4);
     box-shadow: 0 0 10px rgba(0,0,0,0.2);
     display: flex;
     flex-direction: column;
@@ -18,7 +19,7 @@ body {
   }
 
   .chat-header {
-    background-color: #0d6efd;
+    background-color: #686283;
     color: white;
     padding: 10px;
     /* padding-bottom: 5px; */
@@ -27,7 +28,7 @@ body {
   }
   @media screen and (min-width: 768px) {
     .chat-header {
-      background-color: #0d6efd;
+      background-color: #686283;
       color: white;
       padding: 10px;
       padding-bottom: 5px;
@@ -75,10 +76,13 @@ body {
  
   }
 
+  .bi-send{
+    color: white !important;
+  }
   /* .chat-header i{
       font-size: 30px;
       display: inline-block;
-      margin-right: 0px;
+      mgin-right: 0px;
   } */
 
   .chat-header a{
@@ -103,14 +107,14 @@ body {
     padding: 10px;
     overflow-y: auto;
     padding-bottom: 55px;
-    background-image: url('../chatbackground.jpg');
   }
 
   .chat-message {
     margin-bottom: 10px;
     padding: 8px 12px;
     color: white;
-    background-color: #253a50;
+    background-color: #ada5d441;
+    
     border-radius: 10px;
     width: fit-content;
     max-width: 75%;
@@ -146,7 +150,7 @@ body {
 
 
   .chat-message.sent {
-    background-color: #0d6efd;
+    background-color: #4f4b66d3;
     color: white;
     margin-left: auto;
     
@@ -154,11 +158,10 @@ body {
 
   .chat-footer {
 
-    background-color: white;
+    background-color: transparent !important;
     position: fixed;
     width: 70%;
-    padding: 10px;
-    border-top: 1px solid #ddd;
+    padding: 10px; 
     display: flex;
     gap: 10px;
     bottom: 0 !important;
@@ -170,6 +173,16 @@ body {
 
   .chat-footer input {
     flex: 1;
+    background-color: #746d91dc !important;
+    color: white !important;
+    height: 50px;
+    border: none;
+  }
+  .chat-footer input::placeholder{
+      color: white;
+  }
+  .chat-footer input:focus{
+    border: none !important;
   }
 
   .bi-three-dots-vertical{
@@ -243,15 +256,14 @@ body {
 
 @media screen and (max-width: 900px) {
    .chat-footer {
-        background-color: #ffffff;
-        position: fixed;
-        width: 100%;
-        padding: 10px;
-        border-top: 1px solid #ddd;
-        display: flex;
-        gap: 10px;
-        bottom: 0 !important;
-      }
+    background-color: transparent !important;
+    position: fixed;
+    width: 70%;
+    padding: 10px; 
+    display: flex;
+    gap: 10px;
+    bottom: 0 !important;
+  }
 }
 
 
