--- a/views/groupCretation.ejs
+++ b/views/groupCretation.ejs
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
     <style>
-         body {
-        background-color: #f0f2f5;
+           body {
+        background-color: #201d2e;
         overflow: hidden;
         user-select: none;
+        color: white !important;
     }
     .login-container {
         min-height: 96vh;
@@ -17,10 +18,10 @@
         justify-content: center;
     }
     .login-box {
-        background: white;
+        background: #1815255d;
         padding: 30px;
         border-radius: 10px;
-        box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        box-shadow: 0 0 10px rgba(0,0,0,0.5);
         width: 100%;
         max-width: 400px;
         justify-content: center;
@@ -44,6 +45,11 @@
         height: 22px;
         width: 100%;
         font-size: 20px;
+        border-radius: 5px;
+        background-color: #35304b7e;
+        /* border: 1px solid black; */
+        border: none;
+        color: white;
         /* margin-top: 30px; */
     }
     textarea{
@@ -60,19 +66,23 @@
       margin-top: 10px;
       height: 30px;
       width: 130px;
-      background-color: antiquewhite;
-      border: 1px solid black;
-      border-radius: 5px;
+      background-color: #514d6694;
+      /* border: 1px solid white; */
+      border: none;
+      color: white;
+      border-radius: 10px;
     }
     .bi-camera-fill{
         font-size: 30px;
         margin-left: 60px;
         margin-top: -50px;
         position: absolute;
-        color: black;
+        color: white;
         cursor: pointer;
+
         /* float: inline-end; */
     }
+    
     
 
     </style>
@@ -101,7 +111,6 @@
         </div>
       </div>
       
-
       <script>
 
             document.addEventListener('DOMContentLoaded', () => {
@@ -111,11 +120,7 @@
     
             })
             
-
-   
             let changeimage = document.querySelector('.bi-camera-fill');
-
-            
 
             changeimage.addEventListener('click', () => {
                 document.querySelector('#update_image').click();
