--- a/views/myProfile.ejs
+++ b/views/myProfile.ejs
@@ -7,9 +7,10 @@
     <title>Profile</title>
     <style>
          body {
-        background-color: #f0f2f5;
+        background-color: #201d2e;
         overflow: hidden;
         user-select: none;
+        color: white !important;
     }
     .login-container {
         min-height: 96vh;
@@ -17,10 +18,10 @@
         justify-content: center;
     }
     .login-box {
-        background: white;
+        background: #1815255d;
         padding: 30px;
         border-radius: 10px;
-        box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        box-shadow: 0 0 10px rgba(0,0,0,0.5);
         width: 100%;
         max-width: 400px;
         justify-content: center;
@@ -44,6 +45,11 @@
         height: 22px;
         width: 100%;
         font-size: 20px;
+        border-radius: 5px;
+        /* border: 1px solid black; */
+        border: none;
+        background-color: #35304b7e;
+        color: white;
         /* margin-top: 30px; */
     }
     textarea{
@@ -60,17 +66,20 @@
       margin-top: 10px;
       height: 30px;
       width: 130px;
-      background-color: antiquewhite;
-      border: 1px solid black;
-      border-radius: 5px;
+      background-color: #514d6694;
+      /* border: 1px solid white; */
+      border: none;
+      color: white;
+      border-radius: 10px;
     }
     .bi-camera-fill{
         font-size: 30px;
         margin-left: 60px;
         margin-top: -50px;
         position: absolute;
-        color: black;
+        color: white;
         cursor: pointer;
+
         /* float: inline-end; */
     }
     
@@ -87,7 +96,7 @@
                     <input type="file" name="photo" id="update_image" style="display: none;" accept=".jpg,.jpeg,.png">
                     <h1 style="margin-top: 10px; margin-bottom: -10px; font-size: 20px; opacity: 60%; font-waight: 900;" class="number"></h1>
                     <br>
-                    <hr style="height: 2px; background-color: black; border: none;">
+                    <hr style="height: 2px; background-color: white; border: none;">
                     <br>
                     <label style="font-size: 20px; font-weight: 800;">Name :</label>
                     <input type="text" class="name" name="name">
@@ -121,7 +130,9 @@
                     location.href = '/select';
             })
 
-            document.querySelector('.update').addEventListener('click', () => {
+            document.querySelector('.update').addEventListener('click', async (e) => {
+
+                e.preventDefault();
 
                 let Name = document.querySelector('.name').value;
                 let Mobile = document.querySelector('.number').innerHTML; 
@@ -136,15 +147,15 @@
                 formData.append('photo', dp);
                 
 
-                fetch('/userupdate', {
+                await fetch('/userupdate', {
                     method: 'POST',
-                    enctype : "multipart/form-data",
                     body: formData
                 })
                 .then(Response => Response)
                 .then(result => {
                     console.log('Successfully updated');
                 });
+
             });
 
 
