--- a/views/selection.ejs
+++ b/views/selection.ejs
@@ -16,7 +16,7 @@
     <title>Select Person</title>
     <style>
     body {
-        background-color: #f0f2f5;
+        background-color: #27233696;
         overflow: hidden;
         user-select: none;
     }
@@ -27,7 +27,7 @@
         /* float: inline-start; */
     }
     .login-box {
-        background: white;
+        background: #211E2F;
         padding: 10px;
         padding-top: 20px;
         /* border-radius: 10px; */
@@ -40,7 +40,8 @@
     .login-box h1{
         margin-top: -10px;
         text-align: center !important;
-        display: inline-flex;        
+        display: inline-flex;     
+        color: white;   
     }
     
     .select{
@@ -52,7 +53,7 @@
             display: none;
     }
     .user{
-        background-color: antiquewhite;
+        background-color: #ada5d441;
         width: 100%;
         height: 50px;
         border-radius: 10px;
@@ -73,7 +74,7 @@
         margin: 10px;
         margin-left: 70px;
         font-weight: 700;
-        color: black;
+        color: white;
         align-items: center;
     } 
     .user .mob{
@@ -83,11 +84,12 @@
         margin: 10px;
         margin-left: 70px;
         font-weight: 700;
-        color: black;
+        color: white;
         align-items: center;
     }
     hr{
         margin-top: -3px;
+        color: white;
     }
     
     .search-box{
@@ -95,7 +97,18 @@
         width: 100%;
         display: none;
         border-radius: 5px;
+         background-color: #35304bcb;
+         border-radius: 10px;
+        color: white;
+        padding-left: 20px;
     }
+
+    .search-box:focus{
+        border: none !important;
+    }
+     .search-box::placeholder{
+        color: white;
+     }
     .login-popup{
     position: absolute;
     display: flex;
@@ -111,6 +124,7 @@
   .bi-gear{
     font-size: 30px;
     cursor: pointer;
+    color: white;
   }
   .login-popup ul{
     margin-top: 15px;
@@ -126,6 +140,7 @@
     float: inline-end !important;
     font-size: 20px !important;
     margin-top: 7px;
+    color: white;
   }
 
   .about{
@@ -144,12 +159,12 @@
     bottom: 0 !important;
     position: fixed;
     margin-bottom: 40px;
-    border: 1px solid antiquewhite;
     height: 50px;
     width:  50px;
     padding: 5px 5px 5px 5px;
     border-radius: 50px;
     background-color: rgba(0, 0, 0, 0.212);
+    color: white;
     }
 
 @media screen and (max-width: 900px) {
@@ -181,7 +196,6 @@
         position: fixed;
         /* float: inline-end !important; */
         margin-bottom: 40px;
-        border: 1px solid antiquewhite;
         height: 50px;
         width:  50px;
         right: 30px;
@@ -194,7 +208,7 @@
         display: none !important;
     }
     .escchat{
-        background: white;
+        background: #211E2F;
         width: 100%;
         max-width: 80vw;
         margin-left: 3px;
@@ -248,7 +262,7 @@
 
 
 .escchat{
-    background: white;
+    background: #211E2F;
     width: 100%;
     max-width: 80vw;
     margin-left: 3px;
@@ -274,7 +288,6 @@
     /* right: 0; */
     /* left: 422px; Equal to left sidebar width */
     background-color: #fff;
-    border-top: 1px solid #ccc;
     box-shadow: 0 -1px 5px rgba(0,0,0,0.1);
     z-index: 10;
 }
