--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
     <style>
-    body {
-        background-color: #f0f2f5;
+     body {
+        background-color: #201d2e;
         overflow: hidden;
         user-select: none;
+        color: white !important;
     }
     .login-container {
         min-height: 96vh;
@@ -17,10 +18,10 @@
         justify-content: center;
     }
     .login-box {
-        background: white;
+        background: #3a33575d;
         padding: 30px;
         border-radius: 10px;
-        box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        box-shadow: 0 0 10px rgba(0,0,0,0.5);
         width: 100%;
         max-width: 400px;
         justify-content: center;
@@ -29,12 +30,7 @@
         text-align: center;
         margin-top: -15px;
         margin-bottom: -2px;
-    }
-    .bi-arrow-left-short{
-        float: inline-start;
-        font-size: 40px;
-        position: absolute;
-        margin-top: -19px;
+        display: inline-block;
     }
     .main_image{
         height: 200px;
@@ -45,14 +41,22 @@
         object-position: top;
         justify-content: center;
     }
+    .bi-arrow-left-short{
+        float: inline-start;
+        font-size: 30px;
+        cursor: pointer;
+        display: flex;
+        margin-top: 5px;
+    }
     .detail-box{
-        border: 1px solid rgb(218, 214, 203);
+        border: none;
         border-radius: 10px;
         width: 95% !important;
         height: 20%;
-        background-color: rgb(218, 214, 203);
+        background-color: #35304b7e;
         padding: 10px 0px 0px 12px;
         margin-top: 40px;
+        text-align: left;
     }
     .name{
         margin-top: 20px;
@@ -60,6 +64,8 @@
     }
     span{
         margin-top: 20px !important;
+        align-items: center;
+        text-decoration: underline;
     }
     h3{
         margin-top: 0px;
@@ -67,10 +73,11 @@
     .fun-box{
         border: 1px solid rgb(218, 214, 203);
         border-radius: 10px;
+        border: none;
         width: 99% !important;
         height: auto;
         margin-top: 15px;
-        background-color: rgb(218, 214, 203);
+         background-color: #35304b7e;
         /* padding: 13px 0px 0px 0px; */
         display: flex;
         gap: 10px;
@@ -81,6 +88,8 @@
         height: 40px;
         width: 130px;
         border-radius: 10px;
+        background-color: #514d6694 !important;
+        color: white !important;
         border: none;
         display: flex;
         justify-content: center;
@@ -94,19 +103,20 @@
 </head>
 <body>
     <div class="login-container">
-        <div class="login-box">
-            <i class="bi bi-arrow-left-short"></i><h1>Overview</h1>
+        <div class="login-box" style="text-align: center !important;">
+            <i class="bi bi-arrow-left-short"></i>
+            <BR/><h1>Overview</h1>
             <hr>
             <center>
                 <img src="" class="main_image">
-                <h3 style="display: block !important; z-index: 4; color: black;" class="name"><%=name%></h3>
+                <h3 style="display: block !important; z-index: 4; color: white;" class="name"><%=name%></h3>
             </center>
             
             <div class="detail-box">
                 <span>About</span>
-                <h3 style="display: block !important; z-index: 4; color: black;" class="about"><%=about%></h3>
+                <h3 style="display: block !important; z-index: 4; color: white;" class="about">•  <%=about%></h3>
                 <span>Phone number</span>
-                <h3 style="display: block !important; z-index: 4; color: black;" class="number"><%=number%></h3>
+                <h3 style="display: block !important; z-index: 4; color: white;" class="number">•  <%=number%></h3>
 
             </div>
             <div class="fun-box" >
@@ -135,7 +145,7 @@
 
                     if(localStorage.getItem('block-Status') === "true"){
                             block.innerHTML = 'Unblock';
-                            block.style = 'background-color: #831515; color: white;';
+                            block.style = 'background-color: #68608A !important; color: white;';
                     }
                     else{
                             block.innerHTML = '<i class="bi bi-ban"></i>'+'block';
@@ -155,7 +165,7 @@
                                 reports.forEach((element) => {
                                     if(element == localStorage.getItem('mymobile')){
                                                 
-                                            Reportbtn.style = "background-color: #831515; color: white;";
+                                            Reportbtn.style = "background-color: #68608A !important; color: white;";
                                             console.log(Reportbtn);
                                     }
                                 })
