--- a/views/chatting.ejs
+++ b/views/chatting.ejs
@@ -11,6 +11,7 @@
     integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.12.1/font/bootstrap-icons.min.css">
+  <link rel=icon" type=""image/jpg" href="../images/chatimg.jpg">
   <!-- <script src="../chatScript.js"></script> -->
   <link rel="stylesheet" href="../styling/style.css">
   <script src="/socket.io/socket.io.js"></script>
